--- a/index.html
+++ b/index.html
@@ -17,10 +17,11 @@
                 HackFSU will be right back...
               </h1>
               <h2 class="subtitle is-4">
-                  Thanks for stopping by! We're pushing registration <strong>right now</strong>, so we'll be back online
+                  Thanks for stopping by! We're working on repairing some issues with registration, so we'll be back online
                   in a couple of minutes.
                   <br><br>
-                  Be sure to find us on <strong><a href="http://facebook.com/hackfsu">Facebook</a></strong> to find out more about HackFSU!
+                  <!-- Be sure to find us on <strong><a href="http://facebook.com/hackfsu">Facebook</a></strong> to find out more about HackFSU! -->
+                  If you've had issues registering with us, please <strong><a href="mailto:dev@hackfsu.com">email us</a></strong> and tell us more!
               </h2>
             </div>
           </div>
